...
                </View>
              </View>
              <TouchableOpacity
                className="rounded-full w-full py-[12px] items-center mt-3"
                style={{ backgroundColor: colors.primary }}
                onPress={() => router.push("/(main)/(rider)/packages")}
               testID="rider.due-amounts.push-packages">
                <Text className="text-[15px] font-JakartaBold text-white">
                  Renew
                </Text>
              </TouchableOpacity>
            </View>
          ) : (
...
