...
            </TouchableOpacity>

            <TouchableOpacity
              className="p-[14px] border rounded-[12px]"
              style={{ backgroundColor: surfaceBg, borderColor }}
              onPress={() => router.push("/(main)/(rider)/due-amounts")}
             testID="rider.earnings.push-due-amounts">
              <View className="flex-row justify-between items-center">
                <View>
                  <Text
                    className="text-[15px] font-JakartaBold"
                    style={{ color: textPrimary }}
                  >
...
